--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 	<HEAD>
-		<meta http-equiv="content-type" content="text/html;charset=utf-8">
+	<meta http-equiv="refresh" content="0; url=data-web/index.shtml" />
 		<TITLE>
 			302 Moved
 		</TITLE>
